<resources>
    <string name="app_name">MoeTranslate</string>
    <string name="floating_ball_menu_1">Floating Ball Menu</string>
    <string name="accessibility_service_label">MoeTranslator Translate Service</string>
    <string name="accessibility_service_description">[Function Description] \nEnable accessibility permissions to take screenshots for translation.\nWhen granting permissions, a warning will pop up. Please rest assured that MoeTranslate will not collect any of your information.</string>
    <string name="translate_page">Translate</string>
    <string name="gemini_page">AI Chat</string>
    <string name="madoka_page">Madoka</string>
    <string name="me_page">Settings</string>
    <string name="api_name">API：%s</string>
    <string name="tencent_cloud">Tencent Cloud</string>
    <string name="baidu_translate">Baidu Translate</string>
    <string name="android_sdk_old_title">Android version is too low</string>
    <string name="android_sdk_old_content">It looks like your Android version is less than Android 11 (API 30) or Harmony OS version is less than 3.0, which means that you cannot use the translation function of this software, but you can still use other functions except translation. If you want to experience all the functions of this software, please upgrade the system or change the device.</string>
    <string name="user_known">OK</string>
    <string name="find_new_version">New version found</string>
    <string name="version_name">New Version：</string>
    <string name="ignore_update">Ignore this version</string>
    <string name="go_to_update">Go to update</string>
    <string name="not_update">Not yet</string>
    <string name="update_prompt">Do you want to update now? Click Update to jump to the official website of MoeTranslate. Click Download on the official website to get the latest version.</string>
    <string name="getting_notification">Getting notifications…</string>
    <string name="nllb_not_download_content">It looks like you have selected NLLB as the translation model, but it seems that the NLLB model file has not been downloaded yet, so translation is not possible. Click Go to Download to enter the download page; of course, you can also choose other translation APIs to use the translation function.</string>
    <string name="go_to_download">Go to Download</string>
    <string name="nllb_not_download_title">NLLB model file not downloaded</string>
    <string name="user_cancel">Cancel</string>
    <string name="ocr_engine_title">OCR Engine (only available in OCR mode)</string>
    <string name="ocr_engine_header_summary">Select the OCR engine used for extracting text from screenshots. After switching engines, the available \"Source Language\" options will also change accordingly.</string>
    <string name="ocr_engine_category">Select OCR Engine</string>
    <string name="paddleocr_name">PaddleOCR PP-OCRv6</string>
    <string name="paddleocr_description">An open-source offline text recognition engine by Baidu PaddlePaddle. It is one of the world\'s leading OCR models with high accuracy, and is <b><u>completely offline and requires no downloads</u></b>. It supports Chinese, English, Japanese, and Latin-based languages (French, German, Spanish, Italian, Portuguese, etc.), <b><u>but does not support Korean</u></b>.</string>
    <string name="mlkit_ocr_name">ML Kit OCR</string>
    <string name="mlkit_ocr_description">Google ML Kit on-device text recognition. The accuracy is slightly lower, but it is <b><u>completely offline and requires no downloads</u></b>. It supports four languages: Chinese, English, Japanese, and Korean.</string>
    <string name="mlkit_name">ML Kit</string>
    <string name="mlkit_description">Google\'s machine learning kit runs on the device and is suitable for casual and simple translation. <b><u>You need to download a model file of about 100MB for the first run</u></b>. After the download is complete, you can use it right away without the need for a network connection. Click \"Manage ML Kit model files\" below to download and delete model files.</string>
    <string name="nllb_name">NLLB Translate Model</string>
    <string name="nllb_description">Meta\'s model, which is designed for translation, is called \"No Language Left Behind\". As the name suggests, it supports multiple languages. The translation effect of this model is better, but it also needs to be downloaded before use. <b><u>When running for the first time, you need to download a model file of about 1GB. At the same time, the device needs to have at least 6GB of RAM to use this model</u></b>. After the download is complete, there is no need for a network connection, and it can be used immediately. Click \"Manage NLLB model files\" below to download and delete model files.</string>
    <string name="manage_nllb_models">Manage NLLB Model Files</string>
    <string name="baiduapi_name">Baidu Translate</string>
    <string name="baiduapi_description">Baidu Translate\'s API, click \"Manage Baidu Translate API\" below to set up the API, and you can also view the API application tutorial (there is a free call quota of 1 million characters per month).</string>
    <string name="tencentapi_description">Tencent Cloud\'s translation API, click \"Manage Tencent Cloud API\" below to set up the API, and you can also view the API application tutorial (there is a free call quota of 5 million characters per month).</string>
    <string name="tencentapi_name">Tencent Cloud</string>
    <string name="ai_title">Local AI Translation</string>
    <string name="pre_api_title">Pre-Configured Cloud API</string>
    <string name="custom_api_text_title"><b><u>(Advanced settings)</u></b> Customize the Cloud Text Translation API</string>
    <string name="custom_api_text_1">Custom cloud <b><u>text</u></b> translation API1</string>
    <string name="custom_api_text_2">Custom cloud <b><u>text</u></b> translation API2</string>
    <string name="custom_api_text_3">Custom cloud <b><u>text</u></b> translation API3</string>
    <string name="manage_baidu_api">Manage Baidu Translate API</string>
    <string name="manage_tencent_api">Manage Tencent Cloud API</string>
    <string name="manage_custom_api_text_1">Manage custom cloud text translation API1</string>
    <string name="manage_custom_api_text_2">Manage custom cloud text translation API2</string>
    <string name="manage_custom_api_text_3">Manage custom cloud text translation API3</string>
    <string name="current_mode_text">Current Translation Mode：Local OCR Recognition + Text Translation</string>
    <string name="current_mode_pic">Current Translation Mode：Upload Images Directly for Translation</string>
    <string name="custom_api_pic_title"><b><u>(Advanced settings)</u></b> Customize the Cloud Image Translation API</string>
    <string name="custom_api_pic_1">Custom cloud <b><u>image</u></b> translation API1</string>
    <string name="custom_api_pic_2">Custom cloud <b><u>image</u></b> translation API2</string>
    <string name="custom_api_pic_3">Custom cloud <b><u>image</u></b> translation API3</string>
    <string name="manage_custom_api_pic_1">Manage custom cloud image translation API1</string>
    <string name="manage_custom_api_pic_2">Manage custom cloud image translation API2</string>
    <string name="manage_custom_api_pic_3">Manage custom cloud image translation API3</string>
    <string name="save">Save</string>
    <string name="manage_mlkit_models">Manage ML Kit Model Files</string>
    <string name="font_title">Font</string>
    <string name="font_size_title">Font Size</string>
    <string name="font_color">Font Color</string>
    <string name="font_color_summary">Choose a font color you like</string>
    <string name="result_background_color">Background Color</string>
    <string name="result_background_color_summary">Choose a background color that you like</string>
    <string name="penetrability">Permeability</string>
    <string name="penetrability_summary">When turned on, the translation result box will be transparent, but the transparency will increase</string>
    <string name="translate_result_box">Translation results box</string>
    <string name="merge_ocr">Merge multi-line OCR results</string>
    <string name="show_source_text_title">Also show original text</string>
    <string name="volcapi_name">Volc Engine</string>
    <string name="volcapi_description">Volc Engine API, click \"Manage Volc Engine API\" below to set up the API, and you can also view the API application tutorial (there is a free call quota of 2 million characters per month).</string>
    <string name="manage_volc_api">Manage Volc Engine API</string>
    <string name="niuapi_name">NiuTrans</string>
    <string name="niuapi_description">NiuTrans API, click \"Manage NiuTrans API\" below to set up the API, and you can also view the API application tutorial (there is a free call quota of 200,000 characters per day).</string>
    <string name="manage_niu_api">Manage NiuTrans API</string>
    <string name="baiduapi_description_pic">Baidu Translate\'s API, click \"Manage Baidu Translate API\" below to set up the API, and you can also view the API application tutorial (there are 10,000 free calls for image translation per month).</string>
    <string name="tencentapi_description_pic">Tencent Cloud\'s translation API,  click \"Manage Tencent Cloud API\" below to set up the API, and you can also view the API application tutorial (10,000 free calls for image translation per month).</string>
    <string name="floating_ball">Floating ball</string>
    <string name="floating_ball_pic_title">Floating Ball Icon</string>
    <string name="floating_ball_press_title">Long press determine time</string>
    <string name="bingapi_name">Bing Translate</string>
    <string name="bingapi_description">The translation API can be used without configuring a key, and is implemented by simulating a browser accessing Bing Translate for the web. <b><u>This method relies on the structure of the web page and the extraction of tokens, which is less stable and may be subject to access restrictions, so please use other translation APIs more</u></b>.</string>
    <string name="azureapi_name">Azure AI Translate</string>
    <string name="azureapi_description">Microsoft Azure AI Translator API, click \"Manage Azure API\" below to set up the API, and you can also view the API application tutorial (there is a free call quota of 2 million characters per month).</string>
    <string name="manage_azure_api">Manage Azure API</string>
    <string name="other_setting">Other</string>
    <string name="adjust_not_tip">Do not display the adjustment completion prompt</string>
    <string name="adjust_not_tip_summary">When turned on, when the box selects the area to complete the translation or adjusts the position of the completed translation result, the prompt text will not pop up</string>
    <string name="llama_system_prompt_label">System prompt</string>
    <string name="llama_user_prompt_label">User prompt</string>
    <string name="llama_user_prompt_hint">Placeholders: usefromlang, usetolang, usesourcetext</string>
    <string name="llama_prompt_override_explain">Leave blank to use the global default prompt.</string>
    <string name="llama_prompt_reset_default">Reset to default</string>
    <string name="llama_enable_thinking_label">Enable thinking (reasoning)</string>
    <string name="llama_enable_thinking_hint">Off = faster translation. Only affects models that support reasoning (e.g. Qwen3).</string>
    <string name="llama_temperature_label">Temperature (0–2, lower = more stable)</string>
    <string name="llama_max_tokens_label">Max output tokens (16–4096)</string>
</resources>