<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/floating_ball"
        app:iconSpaceReserved="false">

        <com.moe.moetranslator.me.PreferenceWithPreview
            android:key="floating_ball_pic"
            app:iconSpaceReserved="false"
            android:title="@string/floating_ball_pic_title" />

        <Preference
            android:key="floating_ball_press"
            app:iconSpaceReserved="false"
            android:title="@string/floating_ball_press_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/translate_result_box"
        app:iconSpaceReserved="false">

        <Preference
            android:key="result_font"
            android:title="@string/font_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="result_font_size"
            android:title="@string/font_size_title"
            app:iconSpaceReserved="false"/>

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:key="result_view_font_color"
            app:iconSpaceReserved="false"
            android:defaultValue="@color/result_view_font_color_default"
            app:cpv_dialogTitle="@string/font_color"
            android:title="@string/font_color"
            android:summary="@string/font_color_summary"
            app:cpv_showAlphaSlider="true" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:key="result_view_background_color"
            app:iconSpaceReserved="false"
            android:defaultValue="@color/result_view_background_color_default"
            app:cpv_dialogTitle="@string/result_background_color"
            android:title="@string/result_background_color"
            android:summary="@string/result_background_color_summary"
            app:cpv_showAlphaSlider="true" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:key="result_penetrability"
            android:title="@string/penetrability"
            android:summary="@string/penetrability_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="OCR"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="ocr_merge_mode"
            app:iconSpaceReserved="false"
            android:defaultValue="2"
            android:title="@string/merge_ocr"
            android:entries="@array/ocr_merge_mode_entries"
            android:entryValues="@array/ocr_merge_mode_values" />

        <ListPreference
            android:key="show_source_text"
            app:iconSpaceReserved="false"
            android:defaultValue="0"
            android:title="@string/show_source_text_title"
            android:entries="@array/show_source_text_entries"
            android:entryValues="@array/show_source_text_values"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_setting"
        app:iconSpaceReserved="false">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:key="adjust_tip"
            android:title="@string/adjust_not_tip"
            android:summary="@string/adjust_not_tip_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>