<?xml version="1.0" encoding="utf-8"?>

<!--
   * Copyright (C) 2024 murangogo
   *
   * This library is free software; you can redistribute it and/or modify it under
   * the terms of the GNU Lesser General Public License as published by the Free
   * Software Foundation; either version 3 of the License, or (at your option)
   * any later version.
   *
   * This library is distributed in the hope that it will be useful, but WITHOUT
   * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
   * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
   *
   * You should have received a copy of the GNU Lesser General Public License along
   * with this library; if not, write to the Free Software Foundation, Inc.,
   * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
   *-->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="ui_ocr_engine_header"
        app:title="@string/ocr_engine_title"
        app:summary="@string/ocr_engine_header_summary"
        app:titleTextAppearance="?android:attr/textAppearanceLarge"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        app:key="ui_ocr_engine_category"
        app:title="@string/ocr_engine_category"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="ui_paddleocr"
            app:title="@string/paddleocr_name"
            app:icon="@drawable/paddleocr"
            app:summary="@string/paddleocr_description" />

        <SwitchPreferenceCompat
            app:key="ui_mlkit_ocr"
            app:title="@string/mlkit_ocr_name"
            app:icon="@drawable/mlkit"
            app:summary="@string/mlkit_ocr_description" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
